# BreakPoint

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  roadmap.md
.github/workflows/: breakpoint.yml
artifacts/: simulators.json
artifacts/actual/: cases.jsonl  ci_report.json  lm_eval_task.jsonl  lm_eval_task.yaml  manifest.json  metrics.json  openai_evals.yaml  product.json  trace2eval_results.json
artifacts/calibration/: calibrated_gate_policy.json  gold_labels.json  judge_calibration_report.json
artifacts/ci/: packs.json
artifacts/demo/: api_output.json  breakpoint_eval.jsonl  cases.jsonl  ci_report.json  ci_report.md  lm_eval_task.yaml  metrics.json  openai_evals.yaml  preview.json  product.json  run_output.txt
artifacts/failuregym/: format_structured_output.jsonl  manifest.json  prompt_injection_retrieved_context.jsonl  rag_freshness_citation.jsonl  (+3 more)
breakpoint_eval/: __init__.py  actual_data.py  api.py  benchmark.py  calibration.py  categories.py  ci.py  cli.py  compiler.py  env.py  exporters.py  ingestion.py  judges.py  metrics.py  model_runs.py  models.py  mutations.py  orchestration.py  platform.py  production.py  reports.py  sdk.py  simulators.py  specs.py  storage.py  traces.py  validators.py  vllm_server.py
dashboard/: package-lock.json  package.json
examples/: rag_failure.py  red_team_failure.py  support_ticket_failure.py  tool_failure.py
scripts/: build_pdf.ps1  create_actual_data_artifacts.py  create_demo_artifacts.py
tests/: test_api.py  test_compiler.py  test_roadmap_features.py
(+33 files in other folders)
