[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "breakpoint-eval-compiler"
version = "0.1.0"
description = "BreakPoint compiles targeted LLM eval datasets from real failure modes."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "BreakPoint" }]
dependencies = [
  "pydantic>=2.8",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "duckdb>=1.1",
  "datasets>=2.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
  "matplotlib>=3.9",
  "pillow>=10.4",
]
adapters = [
  "dspy-ai>=2.5",
  "langchain>=0.3",
  "langgraph>=0.2",
  "qdrant-client>=1.11",
  "minio>=7.2",
  "psycopg[binary]>=3.2",
]
vector = [
  "faiss-cpu>=1.8; python_version < '3.13'",
]

[project.scripts]
breakpoint = "breakpoint_eval.cli:main"

[tool.setuptools.packages.find]
include = ["breakpoint_eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--basetemp=.pytest_tmp"
